--- a/index.html
+++ b/index.html
@@ -3,138 +3,124 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Event Message Wall</title>
+  <title>Event Message (SNS style)</title>
 
-  <!-- フォント（そのまま LINE Seed JP） -->
+  <!-- LINE Seed JP -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=LINE+Seed+JP:wght@400;700;800&display=swap" rel="stylesheet">
 
   <style>
-    :root{
-      --bg:#000;
-      --dot: rgba(255,255,255,.05);
-      --bezel: rgba(255,255,255,.08);
-    }
-
     html, body{
       margin:0;
       height:100%;
-      background:var(--bg);
+      background:#000;
       overflow:hidden;
-      font-family:"LINE Seed JP", system-ui, -apple-system, "Hiragino Kaku Gothic ProN", "Noto Sans JP", "Meiryo", sans-serif;
+      font-family:"LINE Seed JP", system-ui, -apple-system, "Hiragino Kaku Gothic ProN","Noto Sans JP","Meiryo", sans-serif;
     }
 
-    /* 全画面 */
-    .wrap{
-      height:100%;
-      width:100%;
-      display:flex;
-      align-items:stretch;
-      justify-content:stretch;
-    }
-
-    /* 電光掲示板っぽい下地（うっすらドット） */
-    .wall{
-      position:relative;
-      flex:1;
-      padding: clamp(10px, 1.6vh, 18px);
-      box-sizing:border-box;
-      background:
-        radial-gradient(circle at 1px 1px, var(--dot) 1px, rgba(0,0,0,0) 1.7px) 0 0 / 9px 9px,
-        radial-gradient(circle at 40% 20%, rgba(255,255,255,.06), rgba(0,0,0,0) 55%),
-        radial-gradient(circle at 70% 80%, rgba(255,255,255,.05), rgba(0,0,0,0) 60%),
-        linear-gradient(180deg, rgba(255,255,255,.03), rgba(0,0,0,0));
-    }
-
-    /* 画面を埋め尽くすグリッド */
-    .grid{
-      width:100%;
-      height:100%;
-      display:grid;
-      gap: clamp(10px, 1.4vh, 18px);
-
-      /* 端末サイズに応じてタイル数が自動で変わる */
-      grid-template-columns: repeat(auto-fill, minmax(min(340px, 26vw), 1fr));
-      grid-auto-rows: 1fr;
-      align-content:stretch;
-    }
-
-    /* タイル（メッセージ枠） */
-    .tile{
-      position:relative;
-      overflow:hidden;
-      border-radius: 18px;
-      padding: clamp(12px, 2.0vh, 18px);
-      box-sizing:border-box;
-
-      background:
-        linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
-      border:1px solid var(--bezel);
-      box-shadow:
-        inset 0 1px 0 rgba(255,255,255,.06),
-        inset 0 -16px 36px rgba(0,0,0,.72),
-        0 18px 50px rgba(0,0,0,.55);
-    }
-
-    /* タイル内のLED面 */
-    .tile::before{
-      content:"";
-      position:absolute;
-      inset:10px;
-      border-radius: 14px;
-      background:
-        radial-gradient(circle at 1px 1px, rgba(255,255,255,.05) 1px, rgba(0,0,0,0) 1.7px) 0 0 / 8px 8px,
-        linear-gradient(180deg, rgba(255,255,255,.03), rgba(0,0,0,0) 55%),
-        linear-gradient(180deg, #0a0a0a, #000);
-      box-shadow:
-        inset 0 0 0 1px rgba(255,255,255,.05),
-        inset 0 0 70px rgba(0,0,0,.88);
-      pointer-events:none;
-    }
-
-    .text{
-      position:relative;
-      height:100%;
+    .stage{
+      position:fixed;
+      inset:0;
+      background:#000;
       display:flex;
       align-items:center;
       justify-content:center;
-      text-align:center;
+      padding: 24px;
+      box-sizing:border-box;
+    }
 
-      font-weight:800;
-      /* 画面を埋める用途なので読みやすく大きめ */
-      font-size: clamp(22px, 3.2vw, 56px);
-      line-height: 1.15;
-      letter-spacing: 0.02em;
+    /* 吹き出し */
+    .bubble{
+      position:relative;
+      width:min(920px, 92vw);
+      max-width: 92vw;
+      padding: clamp(18px, 3.2vh, 36px) clamp(18px, 3.2vh, 44px);
+      border-radius: 26px;
+      background: rgba(255,255,255,.10);
+      border: 1px solid rgba(255,255,255,.16);
+      box-shadow:
+        0 24px 70px rgba(0,0,0,.65),
+        inset 0 1px 0 rgba(255,255,255,.10);
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
+    }
 
-      text-shadow:
-        0 0 10px currentColor,
-        0 0 22px currentColor,
-        0 0 44px rgba(255,255,255,.12);
-      filter: saturate(1.15) contrast(1.06);
+    /* しっぽ */
+    .bubble:after{
+      content:"";
+      position:absolute;
+      left: 46px;
+      bottom: -18px;
+      width: 0; height: 0;
+      border-left: 18px solid transparent;
+      border-right: 18px solid transparent;
+      border-top: 18px solid rgba(255,255,255,.10);
+      filter: drop-shadow(0 4px 0 rgba(255,255,255,.06));
+    }
+
+    .text{
+      font-weight: 800;
+      font-size: clamp(30px, 6.2vh, 86px);
+      line-height: 1.12;
+      letter-spacing: .02em;
+      text-align:left;
+      color: #ffffff;
+      text-shadow: 0 3px 22px rgba(0,0,0,.65);
       word-break: break-word;
-      overflow:hidden;
+      white-space: pre-wrap;
     }
 
-    /* 新着：0.2秒で出現（透明→表示 & 110%→100%） */
-    .tile.pop{
-      opacity: 0;
-      transform: scale(1.06);
-      animation: popIn 0.2s ease-out forwards;
-    }
-    @keyframes popIn{
-      0%   { opacity: 0; transform: scale(1.06); }
-      100% { opacity: 1; transform: scale(1.00); }
+    .meta{
+      margin-top: 12px;
+      font-size: 14px;
+      color: rgba(255,255,255,.55);
+      font-weight: 700;
+      letter-spacing: .2px;
+      display:flex;
+      gap:10px;
+      align-items:center;
+      user-select:none;
     }
 
-    /* 新着：一瞬フラッシュ */
-    .tile.flash{
-      animation: flashOnce 0.35s ease-out 1;
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding: 6px 10px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.08);
+      border: 1px solid rgba(255,255,255,.12);
+      color: rgba(255,255,255,.70);
+      font-size: 12px;
+      font-weight: 800;
     }
-    @keyframes flashOnce{
-      0%   { filter: brightness(1.0); }
-      20%  { filter: brightness(2.2); }
-      100% { filter: brightness(1.0); }
+
+    /* 出現/退場アニメ（SNSっぽく） */
+    .enter{
+      opacity:0;
+      transform: translateY(14px) scale(1.03);
+      animation: enter .22s ease-out forwards;
+    }
+    @keyframes enter{
+      to{ opacity:1; transform: translateY(0) scale(1); }
+    }
+
+    .leave{
+      animation: leave .28s ease-in forwards;
+    }
+    @keyframes leave{
+      to{ opacity:0; transform: translateY(-10px) scale(.98); }
+    }
+
+    /* 一瞬フラッシュ（新着強調） */
+    .flash{
+      animation: flash .35s ease-out 1;
+    }
+    @keyframes flash{
+      0%{ filter: brightness(1); }
+      20%{ filter: brightness(1.9); }
+      100%{ filter: brightness(1); }
     }
 
     .status{
@@ -142,7 +128,7 @@
       left: 12px;
       bottom: 10px;
       font-size: 12px;
-      color: rgba(255,255,255,0.55);
+      color: rgba(255,255,255,0.45);
       user-select:none;
       font-weight: 700;
       letter-spacing: .2px;
@@ -152,88 +138,76 @@
 </head>
 
 <body>
-  <div class="wrap">
-    <div class="wall">
-      <div id="grid" class="grid" aria-label="メッセージウォール"></div>
+  <div class="stage">
+    <div id="bubble" class="bubble">
+      <div id="text" class="text">#connecting…</div>
+      <div class="meta">
+        <span class="pill">LIVE</span>
+        <span id="meta">waiting</span>
+      </div>
     </div>
   </div>
 
   <div id="status" class="status">connecting…</div>
 
   <script>
-    // Apps Script WebアプリURL(/exec) ※変更したものを使用
+    // Apps Script WebアプリURL(/exec)
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzLnD6M9UcMuxu-u4AzM_aOY_8yBR90NNPSYQp4rAVczef8jWkYiFrkxv3N2UQMivI2/exec";
 
-    // C列固定（GAS側がC列のみ返す前提でも、HTMLから送っておく）
+    // C列固定（GASがC列だけ返す想定でも、HTMLから送っておく）
     const TARGET_COL = "C";
 
-    // 10秒更新
+    // 10秒ごとに取得
     const POLL_MS = 10000;
 
-    // 色ランダム
-    const COLORS = ["#ffff00", "#ffffff", "#ff1493"];
+    // 1件の表示時間（約10秒）
+    const SHOW_MS = 10000;
 
-    const grid = document.getElementById("grid");
+    // 20字でカット
+    const MAX_CHARS = 20;
+
     const statusEl = document.getElementById("status");
+    const bubbleEl = document.getElementById("bubble");
+    const textEl = document.getElementById("text");
+    const metaEl = document.getElementById("meta");
 
     let lastRowSeen = 1;
     const seenKeys = new Set();
 
-    function setStatus(t){ statusEl.textContent = t; }
-    function pickColor(){ return COLORS[Math.floor(Math.random() * COLORS.length)]; }
+    // 表示待ちキュー
+    const queue = [];
+    let isShowing = false;
 
-    // JSONP（CORS回避）
+    function setStatus(t){ statusEl.textContent = t; }
+
     function fetchJSONP(url, params = {}) {
       return new Promise((resolve, reject) => {
         const cbName = "cb_" + Math.random().toString(36).slice(2);
         const script = document.createElement("script");
+        const q = new URLSearchParams({ ...params, callback: cbName, t: String(Date.now()) });
 
-        const q = new URLSearchParams({
-          ...params,
-          callback: cbName,
-          t: String(Date.now())
-        });
-
-        const cleanup = () => {
-          try { delete window[cbName]; } catch {}
-          script.remove();
-        };
+        const cleanup = () => { try { delete window[cbName]; } catch {} script.remove(); };
 
         window[cbName] = (data) => { cleanup(); resolve(data); };
-
-        script.onerror = () => {
-          cleanup();
-          reject(new Error("JSONP load error"));
-        };
+        script.onerror = () => { cleanup(); reject(new Error("JSONP load error")); };
 
         script.src = url + (url.includes("?") ? "&" : "?") + q.toString();
         document.body.appendChild(script);
 
         setTimeout(() => {
-          if (window[cbName]) {
-            cleanup();
-            reject(new Error("JSONP timeout"));
-          }
+          if (window[cbName]) { cleanup(); reject(new Error("JSONP timeout")); }
         }, 8000);
       });
     }
 
-    // 画面を「埋め尽くす」ため、常に表示可能数を超えたら古いタイルを削除
-    function maxTiles(){
-      // 実際の見た目に合わせて自動計算
-      const rect = grid.getBoundingClientRect();
-      const w = rect.width;
-      const h = rect.height;
-
-      // minmax(min(340px, 26vw), 1fr) の概算：列数を推定
-      const colWidth = Math.min(340, w * 0.26);
-      const cols = Math.max(1, Math.floor(w / (colWidth + 12))); // gap概算
-      const rows = 3; // 高さは「だいたい3段」想定（端末で変動するが十分実用）
-      // ※より厳密にしたければ計算を細かくできます
-      return Math.max(6, cols * rows);
+    function trimToMaxChars(s){
+      const str = String(s ?? "");
+      // サロゲートペアも考慮して安全に切る（絵文字など）
+      const arr = Array.from(str);
+      return arr.slice(0, MAX_CHARS).join("");
     }
 
-    function appendTile(text, rowId){
+    function enqueueMessage(text, rowId){
       const clean = String(text || "").trim();
       if(!clean) return;
 
@@ -241,26 +215,10 @@
       if(seenKeys.has(key)) return;
       seenKeys.add(key);
 
-      const tile = document.createElement("div");
-      tile.className = "tile pop flash";
-
-      const t = document.createElement("div");
-      t.className = "text";
-      t.textContent = "#" + clean;
-      t.style.color = pickColor();
-
-      tile.appendChild(t);
-      grid.appendChild(tile);
-
-      // 埋め尽くし：上限を超えたら古いものから削除
-      const limit = maxTiles();
-      while(grid.children.length > limit){
-        grid.removeChild(grid.firstElementChild);
-      }
-
-      // アニメクラス外し（軽量化）
-      setTimeout(() => tile.classList.remove("pop"), 250);
-      setTimeout(() => tile.classList.remove("flash"), 500);
+      queue.push({
+        text: "#" + trimToMaxChars(clean),
+        row: rowId
+      });
     }
 
     async function poll(){
@@ -273,13 +231,14 @@
         if(data && data.ok){
           const msgs = Array.isArray(data.messages) ? data.messages : [];
           msgs.forEach(m => {
-            if(m && m.text) appendTile(m.text, m.row);
+            if(m && m.text) enqueueMessage(m.text, m.row);
           });
 
           const lr = Number(data.lastRow || lastRowSeen);
           if(Number.isFinite(lr)) lastRowSeen = Math.max(lastRowSeen, lr);
 
-          setStatus(`ok | wall | col=${TARGET_COL} | lastRow=${lastRowSeen} | shown=${seenKeys.size}`);
+          setStatus(`ok | queue=${queue.length} | lastRow=${lastRowSeen}`);
+          kick();
         } else {
           setStatus("response not ok");
         }
@@ -288,17 +247,42 @@
       }
     }
 
+    function showOne(msg){
+      isShowing = true;
+
+      // テキスト反映
+      textEl.textContent = msg.text;
+
+      const now = new Date();
+      metaEl.textContent = `${now.toLocaleTimeString()}  /  #${msg.row ?? "?"}`;
+
+      // アニメ
+      bubbleEl.classList.remove("leave");
+      bubbleEl.classList.add("enter", "flash");
+      setTimeout(() => bubbleEl.classList.remove("enter"), 260);
+      setTimeout(() => bubbleEl.classList.remove("flash"), 420);
+
+      // 10秒後に退場 → 次へ
+      setTimeout(() => {
+        bubbleEl.classList.add("leave");
+        setTimeout(() => {
+          bubbleEl.classList.remove("leave");
+          isShowing = false;
+          kick();
+        }, 300);
+      }, SHOW_MS);
+    }
+
+    function kick(){
+      if(isShowing) return;
+      if(queue.length === 0) return;
+      const msg = queue.shift();
+      showOne(msg);
+    }
+
     function init(){
       poll();
       setInterval(poll, POLL_MS);
-
-      // 画面回転などで上限枚数が変わるので、resize時に古いのを間引く
-      window.addEventListener("resize", () => {
-        const limit = maxTiles();
-        while(grid.children.length > limit){
-          grid.removeChild(grid.firstElementChild);
-        }
-      });
     }
 
     init();
