--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       overflow:hidden;
     }
 
-    /* 吹き出し */
     .bubble{
       position:absolute;
       width:min(820px, 86vw);
@@ -43,7 +42,6 @@
       transform-origin: center;
     }
 
-    /* しっぽ */
     .bubble:after{
       content:"";
       position:absolute;
@@ -67,7 +65,6 @@
       white-space: pre-wrap;
     }
 
-    /* 登場（新規追加） */
     .enter{
       opacity:0;
       transform: translateY(14px) scale(1.04);
@@ -77,7 +74,6 @@
       to{ opacity:1; transform: translateY(0) scale(1); }
     }
 
-    /* 新着フラッシュ */
     .flash{
       animation: flash .35s ease-out 1;
     }
@@ -87,7 +83,6 @@
       100%{ filter: brightness(1); }
     }
 
-    /* 退場（押し出し） */
     .leave{
       animation: leave .28s ease-in forwards;
     }
@@ -118,10 +113,10 @@
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzLnD6M9UcMuxu-u4AzM_aOY_8yBR90NNPSYQp4rAVczef8jWkYiFrkxv3N2UQMivI2/exec";
     const TARGET_COL = "C";
 
-    // 10秒ごとに取得
+    // 10秒ごとに取得（読み込みはそのまま）
     const POLL_MS = 10000;
 
-    // 最大表示数（1〜10を画面に残す）
+    // 画面に残す最大数（1〜10）
     const MAX_ON_SCREEN = 10;
 
     // 20字でカット
@@ -130,15 +125,24 @@
     // 吹き出しが画面端に食い込まない余白（px）
     const MARGIN = 20;
 
+    // ★表示間隔：1〜3秒をランダム
+    const SHOW_INTERVAL_MIN_MS = 1000;
+    const SHOW_INTERVAL_MAX_MS = 3000;
+
     const stage = document.getElementById("stage");
     const statusEl = document.getElementById("status");
 
     let lastRowSeen = 1;
     const seenKeys = new Set();
+
+    // 表示待ち（取得順＝1から順）
     const queue = [];
 
-    // 画面上に並んでいる吹き出し（古い順）
+    // 画面上の吹き出し（古い順＝1から順）
     const onScreen = [];
+
+    // 表示スケジューラ
+    let nextTimer = null;
 
     function setStatus(t){ statusEl.textContent = t; }
 
@@ -175,15 +179,18 @@
       if(seenKeys.has(key)) return;
       seenKeys.add(key);
 
+      // 取得順に並べる＝1から順に表示される
       queue.push({ text: "#" + trimToMaxChars(clean), row: rowId });
     }
 
-    // ランダム位置に配置（要素サイズを考慮してはみ出さないように）
+    function randInt(min, max){
+      return Math.floor(min + Math.random() * (max - min + 1));
+    }
+
     function placeRandomly(el){
       const vw = window.innerWidth;
       const vh = window.innerHeight;
 
-      // 一旦表示してサイズを取る
       el.style.left = "0px";
       el.style.top  = "0px";
 
@@ -211,51 +218,51 @@
 
       placeRandomly(b);
 
-      // アニメクラス外し
       setTimeout(() => b.classList.remove("enter"), 260);
       setTimeout(() => b.classList.remove("flash"), 420);
 
       return b;
     }
 
-    function removeOldestThenAddNext(){
-      if (onScreen.length < MAX_ON_SCREEN) return;
-      if (queue.length === 0) return;
-
-      // 1から順番に消す＝最古を消す
+    function removeOldest(){
       const oldest = onScreen.shift();
-      if (oldest && oldest.el){
-        oldest.el.classList.add("leave");
-        setTimeout(() => {
-          oldest.el.remove();
-        }, 300);
-      }
+      if (!oldest || !oldest.el) return;
 
-      // 次（11以降）を追加
-      const next = queue.shift();
-      const el = createBubble(next);
-      onScreen.push({ el, row: next.row });
+      oldest.el.classList.add("leave");
+      setTimeout(() => {
+        oldest.el.remove();
+      }, 300);
     }
 
-    function fillUpTo10(){
-      // 1〜10が揃うまで消さずに追加していく
-      while(onScreen.length < MAX_ON_SCREEN && queue.length > 0){
+    function stepShowNext(){
+      // キューが空なら待つ（pollで増える）
+      if(queue.length === 0){
+        scheduleNext();
+        setStatus(`ok | onScreen=${onScreen.length} | queue=0 | lastRow=${lastRowSeen}`);
+        return;
+      }
+
+      // 10個までは消さずに追加
+      if(onScreen.length < MAX_ON_SCREEN){
+        const msg = queue.shift();
+        const el = createBubble(msg);
+        onScreen.push({ el, row: msg.row });
+      } else {
+        // 10個揃ったら「1から順に消して、11以降を順に表示」
+        removeOldest();
         const msg = queue.shift();
         const el = createBubble(msg);
         onScreen.push({ el, row: msg.row });
       }
-    }
-
-    function tick(){
-      // まず10個まで埋める
-      fillUpTo10();
-
-      // 10個揃っていて、キューがあれば「1から順に消して11以降を出す」
-      if(onScreen.length >= MAX_ON_SCREEN && queue.length > 0){
-        removeOldestThenAddNext();
-      }
 
       setStatus(`ok | onScreen=${onScreen.length} | queue=${queue.length} | lastRow=${lastRowSeen}`);
+      scheduleNext();
+    }
+
+    function scheduleNext(){
+      if(nextTimer) clearTimeout(nextTimer);
+      const wait = randInt(SHOW_INTERVAL_MIN_MS, SHOW_INTERVAL_MAX_MS);
+      nextTimer = setTimeout(stepShowNext, wait);
     }
 
     async function poll(){
@@ -274,7 +281,9 @@
           const lr = Number(data.lastRow || lastRowSeen);
           if(Number.isFinite(lr)) lastRowSeen = Math.max(lastRowSeen, lr);
 
-          tick();
+          // 表示スケジューラが止まっていたら再開
+          if(!nextTimer) scheduleNext();
+          setStatus(`ok | polled | onScreen=${onScreen.length} | queue=${queue.length} | lastRow=${lastRowSeen}`);
         } else {
           setStatus("response not ok");
         }
@@ -287,7 +296,10 @@
       poll();
       setInterval(poll, POLL_MS);
 
-      // リサイズ時に位置を再抽選（はみ出し対策）
+      // 起動時：表示スケジューラ開始
+      scheduleNext();
+
+      // リサイズ時：はみ出し回避で位置を再抽選
       window.addEventListener("resize", () => {
         onScreen.forEach(o => { if(o.el) placeRandomly(o.el); });
       });
